load("//bzl:rules.bzl",
     "bootstrap_archive",
     "bootstrap_module",
     "bootstrap_signature",
     # "ocaml_library"
)

load("//config:BUILD.bzl", "ROOT_MODULE_OPTS", "ROOT_SIG_OPTS")
load(":BUILD.bzl", "CONFIG_MAP", "write_config")

## root Makefile
# CAMLC=$(BOOT_OCAMLC) -g -nostdlib -I boot -use-prims runtime/primitives

MODULE_OPTS = ROOT_MODULE_OPTS
##+ ["-I", "boot"]
# "-use-prims", "runtime/primitives"]

SIG_OPTS = ROOT_SIG_OPTS

STDLIB = ["//stdlib"]

# COMMON_CMI = $(UTILS_CMI) $(PARSING_CMI) $(TYPING_CMI) $(LAMBDA_CMI) $(COMP_CMI)
# COMMON = $(UTILS) $(PARSING) $(TYPING) $(LAMBDA) $(COMP)
# compilerlibs/ocamlcommon.cma: $(COMMON_CMI) $(COMMON)
# 	$(CAMLC) -a -linkall -o $@ $(COMMON)

bootstrap_archive(
# bootstrap_library(
    name = "utils",
    mode = "bytecode",
    manifest  = [
        ## list from compilerlibs/Makefile.compilerlibs UTILS
        "Build_path_prefix_map",
        "Misc",
        "Identifiable",
        "Numbers",
        "Arg_helper",
        "Clflags",
        "Profile",
        "Local_store",
        "Load_path",
        "Terminfo",
        "Ccomp",
        "Warnings",
        "Consistbl",
        "Strongly_connected_components",
        "Targetint",
        "Int_replace_polymorphic_compare",
        "Domainstate",
        "Binutils",
        "Lazy_backtrack",
        "Diffing",
        "Diffing_with_keys",
        ## Misc and Config make inconsistent assumptions over Config iface
        ## No idea why
        "Config",
    ],
    visibility = ["//compilerlibs:__pkg__"]
)


bootstrap_module(
    name   = "Arg_helper",
    struct = "arg_helper.ml",
    sig    = "Arg_helper_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ## (String)
        ## (Printf)
        ## (Printexc)
        ## (Map)
        ## (List)
    ]
)

bootstrap_signature(
    name = "Arg_helper_cmi",
    src  = "arg_helper.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ## (Map)
    ]
)

bootstrap_module(
    name   = "Binutils",
    struct = "binutils.ml",
    sig    = "Binutils_cmi",
    opts = MODULE_OPTS,
    ## DEMO: we can depend on individual submodules instead of the entire lib
    deps   = [
        ## "//stdlib" ## depend on entire Stdlib

        ## depend on individual Stdlib submodules:
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Result",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Lazy",
        # "//stdlib:Stdlib.LargeFile",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.Int32",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Fun",
        "//stdlib:Stdlib.Char",
        "//stdlib:Stdlib.Bytes",
        "//stdlib:Stdlib.Array"
    ],
    visibility = ["//bytecomp:__pkg__"]
)

bootstrap_signature(
    name = "Binutils_cmi",
    src  = "binutils.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ## (Result)
    ]
)

bootstrap_module(
    name   = "Build_path_prefix_map",
    struct = "build_path_prefix_map.ml",
    sig    = "Build_path_prefix_map_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ## (String)
        ## (Printf)
        ## (List)
        ## (Buffer)
    ]
)

bootstrap_signature(
    name = "Build_path_prefix_map_cmi",
    src  = "build_path_prefix_map.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
    ]
)

bootstrap_module(
    name   = "Ccomp",
    struct = "ccomp.ml",
    sig    = "Ccomp_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Profile", ## (Utils Profile)
        ":Misc", ## (Utils Misc)
        ":Load_path", ## (Utils Load_path)
        ":Config", ## (Utils Config)
        ":Clflags", ## (Utils Clflags)
        ## (Sys)
        ## (String)
        ## (Printf)
        ## (List)
        ## (Filename)
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//bytecomp:__pkg__",
        "//driver:__pkg__"
    ]
)

bootstrap_signature(
    name = "Ccomp_cmi",
    src  = "ccomp.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
    ]
)

bootstrap_module(
    name   = "Clflags",
    struct = "clflags.ml",
    sig    = "Clflags_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Profile", ## (Utils Profile)
        ":Numbers", ## (Utils Numbers)
        ":Misc", ## (Utils Misc)
        ":Config", ## (Utils Config)
        ":Arg_helper", ## (Utils Arg_helper)
        ## (String)
        ## (Printf)
        ## (List)
        ## (Filename)
        ## (Arg)
    ],
    visibility = [
        "//asmcomp:__subpackages__",
        "//driver:__subpackages__",
        "//parsing:__pkg__",
        "//middle_end/flambda:__pkg__",
        "//typing:__pkg__"
    ]
)

bootstrap_signature(
    name = "Clflags_cmi",
    src  = "clflags.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ":Profile", ## (Utils Profile)
        ":Misc", ## (Utils Misc)
        ## (Digest)
        ## (Arg)
    ],
    visibility = ["//driver:__pkg__"]
)

write_config(
    name     = "config_ml",
    output   = "config.ml",
    template = "config.mlp",
    data     = CONFIG_MAP
)

bootstrap_module(
    name   = "Config",
    struct = "config.ml",
    sig    = "Config_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
    ],
    data = ["//runtime:primitives"],
    visibility = [
        "//asmcomp:__pkg__",
        "//asmcomp:__subpackages__",
        "//bytecomp:__pkg__",
        "//driver:__pkg__"
    ]
)

bootstrap_signature(
    name = "Config_cmi",
    src  = "config.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
    ],
    data = ["//runtime:primitives"],
)

bootstrap_module(
    name   = "Consistbl",
    struct = "consistbl.ml",
    sig    = "Consistbl_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Misc", ## (Utils Misc)
        ## (Set)
        ## (Map)
        ## (List)
        ## (Hashtbl)
        ## (Digest)
    ],
    visibility = ["//typing:__pkg__"]
)

bootstrap_signature(
    name = "Consistbl_cmi",
    src  = "consistbl.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ":Misc", ## (Utils Misc)
        ## (Set)
        ## (Map)
        ## (Hashtbl)
        ## (Digest)
    ]
)

bootstrap_module(
    name   = "Diffing",
    struct = "diffing.ml",
    sig    = "Diffing_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Misc", ## (Utils Misc)
        ## (Option)
        ## (List)
        ## (Format)
        ## (Array)
    ]
)

bootstrap_signature(
    name = "Diffing_cmi",
    src  = "diffing.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ":Misc", ## (Utils Misc)
        ## (Format)
        ## (Digest)
    ]
)

bootstrap_module(
    name   = "Diffing_with_keys",
    struct = "diffing_with_keys.ml",
    sig    = "Diffing_with_keys_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Misc", ## (Utils Misc)
        ":Diffing", ## (Utils Diffing)
        ## (Map)
        ## (List)
        ## (Format)
        ## (Either)
        ## (Array)
    ]
)

bootstrap_signature(
    name = "Diffing_with_keys_cmi",
    src  = "diffing_with_keys.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ":Diffing", ## (Utils Diffing)
        ## (Format)
    ],
    visibility = ["//typing:__pkg__"]
)

bootstrap_module(
    name   = "Domainstate",
    struct = "domainstate.ml",
    sig    = "Domainstate_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
    ],
    visibility = ["//asmcomp:__subpackages__"]
)

genrule(
    name = "domainstate_ml",
    outs = ["domainstate.ml"],
    srcs = ["//runtime/caml:domain_state.tbl"],
    cmd  = "\n".join([

        ## FIXME: next to last entry 'checking_pointer_pc is conditional

        "echo \"type t =\" > domain_state.ml.tmp;",
        "sed -n -e 's/DOMAIN_STATE[^,]*, *\\([^)]*\\)).*/| Domain_\\1/p' $(location //runtime/caml:domain_state.tbl) >> domain_state.ml.tmp;",
        "echo >> domain_state.ml.tmp",

        "echo \"let idx_of_field =\" >> domain_state.ml.tmp;",
        "echo \"  let curr = 0 in\" >> domain_state.ml.tmp;",
        "sed -n -e 's/DOMAIN_STATE[^,]*, *\\([^)]*\\)).*/" +
        "let idx__\\1 = curr in let curr = curr + 1 in/p' $(location //runtime/caml:domain_state.tbl) >> domain_state.ml.tmp;",
        "echo >> domain_state.ml.tmp;",

        "echo \"let _ = curr in\" >> domain_state.ml.tmp;",
        "echo \"function\" >> domain_state.ml.tmp;",

        "sed -n -e 's/DOMAIN_STATE[^,]*, *\\([^)]*\\)).*/" +
        "| Domain_\\1 -> idx__\\1/p' $(location //runtime/caml:domain_state.tbl) >> domain_state.ml.tmp;",

        # if NAKED_POINTERS_CHECKER config option set && !defined(_WIN32)
        # "cp domain_state.ml.tmp $@;",
        # else remove
        "sed -n -e '/checking_pointer_pc/!p' domain_state.ml.tmp > $@;"
        # "rm domain_state.ml.tmp"
    ])
)

bootstrap_signature(
    name = "Domainstate_cmi",
    src  = "domainstate.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
    ]
)

genrule(
    name = "domainstate_mli",
    outs = ["domainstate.mli"],
    srcs = ["//runtime/caml:domain_state.tbl"],
    cmd  = "\n".join([

        ## FIXME: next to last entry 'checking_pointer_pc is conditional

        "echo \"type t =\" > domain_state.mli.tmp;",
        "sed -n -e 's/DOMAIN_STATE[^,]*, *\\([^)]*\\)).*/" +
        "| Domain_\\1/p' $(location //runtime/caml:domain_state.tbl) >> domain_state.mli.tmp;",
        "echo >> domain_state.mli.tmp",

        "echo \"val idx_of_field : t -> int\" >> domain_state.mli.tmp;",

        # if NAKED_POINTERS_CHECKER config option set && !defined(_WIN32)
        ## "mv domain_state.tmp $@;"
        # else remove
        "sed -n -e '/checking_pointer_pc/!p' domain_state.mli.tmp >> $@;"
    ])
)


bootstrap_module(
    name   = "Identifiable",
    struct = "identifiable.ml",
    sig    = "Identifiable_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Misc", ## (Utils Misc)
        ## (Set)
        ## (Printf)
        ## (Map)
        ## (List)
        ## (Hashtbl)
        ## (Format)
    ],
    visibility = [
        "//middle_end/flambda/base_types:__pkg__",
        "//typing:__pkg__"
    ]
)

bootstrap_signature(
    name = "Identifiable_cmi",
    src  = "identifiable.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ## (Set)
        ## (Map)
        ## (Hashtbl)
        ## (Format)
    ],
    visibility = [
        "//middle_end:__subpackages__",
        "//middle_end/flambda/base_types:__subpackages__",
        "//utils:__pkg__"
    ]
)

bootstrap_module(
    name   = "Int_replace_polymorphic_compare",
    struct = "int_replace_polymorphic_compare.ml",
    sig    = "Int_replace_polymorphic_compare_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
    ],
    visibility = [
        "//lambda:__pkg__",
        "//middle_end:__pkg__",
        "//middle_end/flambda:__subpackages__"
    ]
)

bootstrap_signature(
    name = "Int_replace_polymorphic_compare_cmi",
    src  = "int_replace_polymorphic_compare.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
    ]
)

bootstrap_module(
    name   = "Lazy_backtrack",
    struct = "lazy_backtrack.ml",
    sig    = "Lazy_backtrack_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ## (Either)
    ],
    visibility = ["//typing:__pkg__"]
)

bootstrap_signature(
    name = "Lazy_backtrack_cmi",
    src  = "lazy_backtrack.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ## (Either)
    ],
    visibility = ["//typing:__pkg__"]
)

bootstrap_module(
    name   = "Load_path",
    struct = "load_path.ml",
    sig    = "Load_path_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Misc", ## (Utils Misc)
        ":Local_store", ## (Utils Local_store)
        ":Config", ## (Utils Config)
        ## (Sys)
        ## (String)
        ## (List)
        ## (Filename)
        ## (Array)
    ],
    visibility = ["//parsing:__pkg__", "//typing:__pkg__"]
)

bootstrap_signature(
    name = "Load_path_cmi",
    src  = "load_path.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
    ]
)

bootstrap_module(
    name   = "Local_store",
    struct = "local_store.ml",
    sig    = "Local_store_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ## (List)
        ## (Fun)
    ],
    visibility = ["//typing:__pkg__"]
)

bootstrap_signature(
    name = "Local_store_cmi",
    src  = "local_store.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
    ]
)

bootstrap_module(
    name   = "Misc",
    struct = "misc.ml",
    sig    = "Misc_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Config", ## (Utils Config)
        ":Build_path_prefix_map", ## (Utils Build_path_prefix_map)
        ## (Sys)
        ## (String)
        ## (Set)
        ## (Printf)
        ## (Printexc)
        ## (Option)
        ## (Nativeint)
        ## (Map)
        ## (List)
        ## (Int64)
        ## (Int32)
        ## (Int)
        ## (Hashtbl)
        ## (Fun)
        ## (Format)
        ## (Filename)
        ## (Digest)
        ## (Bytes)
        ## (Buffer)
        ## (Array)
    ],
    data = ["//runtime:primitives"],
    visibility = [
        "//asmcomp:__subpackages__",
        "//bytecomp:__pkg__",
        "//driver:__pkg__",
        "//file_formats:__pkg__",
        "//parsing:__pkg__",
        "//tools:__pkg__"
    ]
)

bootstrap_signature(
    name = "Misc_cmi",
    src  = "misc.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ":Config_cmi",
        ":Build_path_prefix_map", ## (Utils Build_path_prefix_map)
        ## (String)
        ## (Set)
        ## (Map)
        ## (Hashtbl)
        ## (Format)
        ## (Digest)
    ],
    data = ["//runtime:primitives"],
    visibility = ["//file_formats:__pkg__"]
)

bootstrap_module(
    name   = "Numbers",
    struct = "numbers.ml",
    sig    = "Numbers_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Misc", ## (Utils Misc)
        ":Identifiable", ## (Utils Identifiable)
        ## (Set)
        ## (Printf)
        ## (Map)
        ## (Int64)
        ## (Int)
        ## (Hashtbl)
        ## (Format)
        ## (Digest)
    ],
    visibility = ["//middle_end/flambda/base_types:__pkg__"]
)

bootstrap_signature(
    name = "Numbers_cmi",
    src  = "numbers.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ":Identifiable", ## (Utils Identifiable)
        ## (Set)
        ## (Map)
        ## (Int64)
        ## (Hashtbl)
    ]
)

bootstrap_module(
    name   = "Profile",
    struct = "profile.ml",
    sig    = "Profile_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Misc", ## (Utils Misc)
        ## (Sys)
        ## (String)
        ## (Printf)
        ## (List)
        ## (Int)
        ## (Hashtbl)
        ## (Gc)
        ## (Format)
        ## (Float)
        ## (Digest)
        ## (Array)
    ],
    visibility = [
        "//driver:__pkg__",
        "//asmcomp:__pkg__"
    ]
)

bootstrap_signature(
    name = "Profile_cmi",
    src  = "profile.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ## (Format)
    ]
)

bootstrap_module(
    name   = "Strongly_connected_components",
    struct = "strongly_connected_components.ml",
    sig    = "Strongly_connected_components_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Numbers", ## (Utils Numbers)
        ":Misc", ## (Utils Misc)
        ":Identifiable", ## (Utils Identifiable)
        ## (Set)
        ## (Map)
        ## (List)
        ## (Hashtbl)
        ## (Digest)
        ## (Array)
    ],
    visibility = ["//middle_end/flambda:__pkg__"]
)

bootstrap_signature(
    name = "Strongly_connected_components_cmi",
    src  = "strongly_connected_components.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ":Identifiable", ## (Utils Identifiable)
        ## (Set)
        ## (Map)
        ## (Hashtbl)
    ]
)

bootstrap_module(
    name   = "Targetint",
    struct = "targetint.ml",
    sig    = "Targetint_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Misc", ## (Utils Misc)
        ## (Sys)
        ## (Int64)
        ## (Int32)
        ## (Format)
        ## (Digest)
    ]
)

bootstrap_signature(
    name = "Targetint_cmi",
    src  = "targetint.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ## (Format)
    ],
    visibility = ["//asmcomp:__pkg__"]
)

bootstrap_module(
    name   = "Terminfo",
    struct = "terminfo.ml",
    sig    = "Terminfo_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ## (Sys)
        ## (Printf)
    ],
    visibility = ["//parsing:__pkg__"]
)

bootstrap_signature(
    name = "Terminfo_cmi",
    src  = "terminfo.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
    ]
)

bootstrap_module(
    name   = "Warnings",
    struct = "warnings.ml",
    sig    = "Warnings_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Misc", ## (Utils Misc)
        ## (String)
        ## (Printf)
        ## (List)
        ## (Lexing)
        ## (Int)
        ## (Hashtbl)
        ## (Format)
        ## (Digest)
        ## (Char)
        ## (Array)
        ## (Arg)
    ],
    visibility = ["//parsing:__pkg__"]
)

bootstrap_signature(
    name = "Warnings_cmi",
    src  = "warnings.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ## (Lexing)
        ## (Lazy)
    ]
)

################################################################
################################################################
